Prevent overlapping rooms

--- a/projects/roguelike-game/main.css
+++ b/projects/roguelike-game/main.css
@@ -12,11 +12,11 @@ body{
 }
 
 .area{
-	background-color: tan;
+	background-color: white;
 }
 
 .player{
-	background-color: blue ;
+	background-color: blue;
 }
 
 .health{
